test_init e test_square completed

--- a/lab5/Makefile
+++ b/lab5/Makefile
@@ -1,16 +1,14 @@
-# Makefile for the lab1 driver (based on that of hello).
-
 COMPILER_TYPE= gnu
 
 CC=gcc
 
 PROG=	lab5
-SRCS=	lab5.c test5.c vbe.c video_gr.c
+SRCS=	lab5.c test5.c vbe.c video_gr.c timer.c
 
 CCFLAGS= -Wall
 
 DPADD+=	${LIBDRIVER} ${LIBSYS}
-LDADD+=	-ldriver -lsys
+LDADD+=	-llm -ldriver -lsys
 
 LDFLAGS+= -L .
 
@@ -18,5 +16,3 @@ MAN=
 
 .include <bsd.prog.mk>
 .include <bsd.gcc.mk>
-
-
