--- a/lab5/Makefile
+++ b/lab5/Makefile
@@ -3,7 +3,7 @@ COMPILER_TYPE= gnu
 CC=gcc
 
 PROG=	lab5
-SRCS=	lab5.c test5.c vbe.c video_gr.c timer.c keyboard.c
+SRCS=	lab5.c test5.c vbe.c video_gr.c timer.c keyboard.c sprite.c
 
 CCFLAGS= -Wall
 
