Started making menu state

--- a/proj/source/Makefile
+++ b/proj/source/Makefile
@@ -3,8 +3,8 @@ COMPILER_TYPE= gnu
 CC=gcc
 
 PROG=	proj
-SRCS=	proj.c vbe.c timer.c interface.c Player.c keyboard.c
-SRCS+=	Bitmap.c
+SRCS=	proj.c vbe.c timer.c interface.c Player.c keyboard.c mouse.c
+SRCS+=	Bitmap.c Game.c MainMenuState.c
 
 CCFLAGS= -Wall
 
