--- a/proj/source/Makefile
+++ b/proj/source/Makefile
@@ -4,7 +4,7 @@ CC=gcc
 
 PROG=	proj
 SRCS=	proj.c vbe.c timer.c interface.c Player.c keyboard.c mouse.c
-SRCS+=	Bitmap.c Game.c MainMenuState.c
+SRCS+=	Bitmap.c Game.c MainMenuState.c Obstacles.c
 
 CCFLAGS= -Wall
 
