menu and game state working together

--- a/proj/source/Makefile
+++ b/proj/source/Makefile
@@ -4,7 +4,7 @@ CC=gcc
 
 PROG=	proj
 SRCS=	proj.c vbe.c timer.c interface.c keyboard.c mouse.c
-SRCS+=	Bitmap.c Game.c MainMenuState.c Obstacles.c  Player.c GameState.c Collisions.c
+SRCS+=	Bitmap.c Game.c MainMenuState.c Obstacles.c  Player.c GameState.c Collisions.c score.c Button.c
 
 CCFLAGS= -Wall
 
